Refactor Incense Plate lit state into block state property
- replaced "burning" NBT tag with "lit" block state property
- split tick implementations for server and client
- Incense Plate block emits a tiny bit of light while lit